Bug 74287 - No color selectable for scatter chart points if there is no line
Summary: No color selectable for scatter chart points if there is no line
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: Other Linux (All)
: medium normal
Assignee: Katarina Behrens
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-31 17:07 UTC by Francisco
Modified: 2015-03-01 16:12 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Francisco 2014-01-31 17:07:05 UTC
Problem description: 
When creating a scatter chart where only symbols are present (i.e., no line conecting them), series color remains deactivated, thus it's not possible to change the series color

Steps to reproduce:
1. Create a symbol-only scatter chart
2. Select one of the series of the chart and try to format it
3. Try to change at least one of the series color

Current behavior:
Color option is deactivated, making formatting impossible. 

Expected behavior:
Color should be electable, as before 4.2 
              
Workaround:
Select any different line style from none (continuous, dotted, etc.), which activates series color option.

OS:
Kubuntu 12.04, x86_64
Comment 1 Francisco 2014-02-09 13:59:50 UTC
Not reproducible under Windows 7, x86
Comment 2 Regina Henschel 2014-02-10 18:38:18 UTC
It was selectable in Version 4.1.0.0.alpha0+ (Build ID: 049ce78144650d92eb6bd73292868f73d37c901)

Not selectable with Version: 4.2.0.4
Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71

Not selectable with Version: 4.3.0.0.alpha0+
Build ID: 160db96a882a2be8c3307e8a04beda4ae93a13c4
TinderBox: Win-x86@39, Branch:master, Time: 2014-01-19_09:25:52

all on Windows 7 32bit.
Comment 3 Francisco 2014-02-10 19:51:45 UTC
Regina:

Interesting: I remember was able to select it under Windows 7, though the difference between my Kubuntu and WIndows test was that the second one was done in a just created profile.

Did you tested in a new or previous profle?
Comment 4 Regina Henschel 2014-02-10 20:22:32 UTC
My profile was new, as I installed LO, but it is used now. I've just tried with a virgin profile and the error is still as described, the color cannot be chosen.
Comment 5 Francisco 2014-02-11 00:03:36 UTC
(In reply to comment #4)
> My profile was new, as I installed LO, but it is used now. I've just tried
> with a virgin profile and the error is still as described, the color cannot
> be chosen.

Well, you are right, I can reproduce it on the same machine I tasted before and I can reproduce it. I think must pay more attention :-/
Comment 6 Katarina Behrens 2014-03-27 09:23:25 UTC
Claiming this one
Comment 7 Commit Notification 2014-03-29 21:34:44 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=654cea3304572e4d33030c8e60503750b06156a3

fdo#74287: Correctly enable/disable widgets w/ invisible lines



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Katarina Behrens 2014-03-29 21:35:59 UTC
la la la
Comment 9 Francisco 2014-06-17 22:06:02 UTC
Hi Katarina.

I can still reproduce the bug under Ubuntu with LibO 4.2.5 from PPA. Was the patch intended for 4.3 or 4.2.6?
Comment 10 Francisco 2014-08-12 01:42:44 UTC
It's a pitty it wasn't solved for LibO 4.2... goodbay LibO 4.2...

I hope LibO 4.3 won't have strange and cumbresome regresions...
Comment 11 Francisco 2014-10-25 16:13:44 UTC
The bug is still present in LibO 4.2.7 RC2
Comment 12 Katarina Behrens 2015-01-06 10:02:20 UTC
There isn't going to be any new 4.2.X release of LibO anymore. This bug is fixed in 4.3. 

The fix wasn't backported to 4.2 because i) the bug is really minor ii) a workaround exists and it is trivial.

What you can do (if you're using Linux) to have the bug fixed in LibO 4.2 series is to ask LibO packager of the Linux distribution you're using to include the patch (which is linked below) in LibO 4.2 package and release a new version. If you are on Windows, you can ask one of the companies providing paid LibO support to do the same.

If none of the above options is available to you, I'm sorry, there's nothing I can do to help.
Comment 13 Francisco 2015-01-07 16:06:28 UTC
(In reply to Katarina Behrens from comment #12)
> There isn't going to be any new 4.2.X release of LibO anymore. This bug is
> fixed in 4.3. 


> The fix wasn't backported to 4.2 because i) the bug is really minor ii) a
> workaround exists and it is trivial.

You dont know what you're taking about. I do dozens of charts with mixed symbols only & lines only, and even with my own templates it's a tedious task. Minor for you, maybe, not for me. 


Besides, LibO 4.3 has it's own regressions, so it's completely useless

> What you can do (if you're using Linux) to have the bug fixed in LibO 4.2
> series is to ask LibO packager of the Linux distribution you're using to
> include the patch (which is linked below) in LibO 4.2 package and release a
> new version. If you are on Windows, you can ask one of the companies
> providing paid LibO support to do the same.

I'll see

> If none of the above options is available to you, I'm sorry, there's nothing
> I can do to help.

There where 8... eight releases of libO 4.2, the largest I've seen, and you waited until the last to tell that there weren't going to be any one more of these.
Comment 14 Petr Hudeček 2015-03-01 16:12:39 UTC
The color can now be changed for an XY-scatter graph without lines.

Tested in 4.5.0.0.alpha0+ on Windows 8.1.