fdo#74287: Correctly enable/disable widgets w/ invisible lines

Restore pre-ui behaviour - disable transparency & width control,
but keep colour control active when line contains symbols (e.g.
scatter chart)

Change-Id: I4005fc376fa1640c5b9d7e736fbdac7417f0edd9